unpackaged/main/default/objects/Engagements_Checklist__c/Engagements_Checklist__c.object-meta.xml
<CustomObject>
    <description>Temporary object to maintain task checklists for Consulting Engagements - set to be a future feature of the NCMi/Retail Solutions engines.</description>
    <label>Engagements Checklist</label>
    <nameField>
        <label>Engagements Checklist Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Engagements Checklist</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>