unpackaged/main/default/objects/Engagements_Checklist__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Engagements Checklist</relationshipLabel>
    <relationshipName>Engagements_Checklist</relationshipName>
    <type>Lookup</type>
</CustomField>