unpackaged/main/default/objects/Engagements_Checklist__c/fields/Attrition_Amount__c.field-meta.xml
<CustomField>
    <fullName>Attrition_Amount__c</fullName>
    <label>Attrition Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>