unpackaged/main/default/objects/Engagements_Checklist__c/fields/Best_Ideas_submitted_by_moderator__c.field-meta.xml
<CustomField>
    <fullName>Best_Ideas_submitted_by_moderator__c</fullName>
    <label>Best Ideas submitted by moderator</label>
    <type>Date</type>
</CustomField>