unpackaged/main/default/objects/Engagements_Checklist__c/fields/Cancellation_Decision__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Decision__c</fullName>
    <label>Cancellation Decision</label>
    <type>Date</type>
</CustomField>