unpackaged/main/default/objects/Engagements_Checklist__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <label>City</label>
    <type>TextArea</type>
</CustomField>