unpackaged/main/default/objects/Engagements_Checklist__c/fields/Deposit_Paid_Date__c.field-meta.xml
<CustomField>
    <fullName>Deposit_Paid_Date__c</fullName>
    <label>Deposit Paid Date</label>
    <type>Date</type>
</CustomField>