unpackaged/main/default/objects/Engagements_Checklist__c/fields/Engagement__c.field-meta.xml
<CustomField>
    <fullName>Engagement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>NCM Engagement the Checklist is for</inlineHelpText>
    <label>Engagement</label>
    <referenceTo>Engagement__c</referenceTo>
    <relationshipLabel>Engagements Checklist</relationshipLabel>
    <relationshipName>Engagements_Checklist</relationshipName>
    <type>Lookup</type>
</CustomField>