unpackaged/main/default/objects/Engagements_Checklist__c/fields/Engagement_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Engagement_End_Date__c</fullName>
    <label>Engagement End Date</label>
    <type>Date</type>
</CustomField>