unpackaged/main/default/objects/Engagements_Checklist__c/fields/Feedback_Email_Sent__c.field-meta.xml
<CustomField>
    <fullName>Feedback_Email_Sent__c</fullName>
    <label>Feedback Email Sent</label>
    <type>Date</type>
</CustomField>