unpackaged/main/default/objects/Engagements_Checklist__c/fields/Final_Confirmations_Sent__c.field-meta.xml
<CustomField>
    <fullName>Final_Confirmations_Sent__c</fullName>
    <description>Instructor and Client</description>
    <inlineHelpText>Instructor and Client</inlineHelpText>
    <label>Final Confirmations Sent</label>
    <type>Date</type>
</CustomField>