unpackaged/main/default/objects/Engagements_Checklist__c/fields/Final_Roster_Received__c.field-meta.xml
<CustomField>
    <fullName>Final_Roster_Received__c</fullName>
    <label>Final Roster Received</label>
    <type>Date</type>
</CustomField>