unpackaged/main/default/objects/Engagements_Checklist__c/fields/Financial_Data__c.field-meta.xml
<CustomField>
    <fullName>Financial_Data__c</fullName>
    <label>Financial Data</label>
    <length>1500</length>
    <type>LongTextArea</type>
</CustomField>