unpackaged/main/default/objects/Engagements_Checklist__c/fields/Five_Week_Check_Complete__c.field-meta.xml
<CustomField>
    <fullName>Five_Week_Check_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Five Week Check- Complete</label>
    <type>Checkbox</type>
</CustomField>