unpackaged/main/default/objects/Engagements_Checklist__c/fields/Five_Week_Check_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Five_Week_Check_Start_Date__c</fullName>
    <label>Five Week Check - Start Date</label>
    <type>Date</type>
</CustomField>