unpackaged/main/default/objects/Engagements_Checklist__c/fields/Forecasted_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Forecasted_Revenue__c</fullName>
    <label>Forecasted Revenue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>