unpackaged/main/default/objects/Engagements_Checklist__c/fields/Guest_Speaker__c.field-meta.xml
<CustomField>
    <fullName>Guest_Speaker__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Guest Speaker</label>
    <type>Checkbox</type>
</CustomField>