unpackaged/main/default/objects/Engagements_Checklist__c/fields/Hotel_Cancellation_Fee__c.field-meta.xml
<CustomField>
    <fullName>Hotel_Cancellation_Fee__c</fullName>
    <label>Hotel Cancellation Fee</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>