unpackaged/main/default/objects/Engagements_Checklist__c/fields/Hotel_Cancellation_Notes__c.field-meta.xml
<CustomField>
    <fullName>Hotel_Cancellation_Notes__c</fullName>
    <label>Hotel Cancellation Notes</label>
    <type>TextArea</type>
</CustomField>