unpackaged/main/default/objects/Engagements_Checklist__c/fields/Hotel_General_Notes__c.field-meta.xml
<CustomField>
    <fullName>Hotel_General_Notes__c</fullName>
    <label>Hotel General Notes</label>
    <type>TextArea</type>
</CustomField>