unpackaged/main/default/objects/Engagements_Checklist__c/fields/Instructor_Email_Sent__c.field-meta.xml
<CustomField>
    <fullName>Instructor_Email_Sent__c</fullName>
    <description>Determine general content work and materials, as well as financial data needs</description>
    <inlineHelpText>Determine general content work and materials, as well as financial data needs</inlineHelpText>
    <label>Instructor Email Sent</label>
    <type>Date</type>
</CustomField>