unpackaged/main/default/objects/Engagements_Checklist__c/fields/Location_Information__c.field-meta.xml
<CustomField>
    <fullName>Location_Information__c</fullName>
    <label>Location Information</label>
    <type>TextArea</type>
</CustomField>