unpackaged/main/default/objects/Engagements_Checklist__c/fields/Materials__c.field-meta.xml
<CustomField>
    <fullName>Materials__c</fullName>
    <label>Materials</label>
    <length>1500</length>
    <type>LongTextArea</type>
</CustomField>