unpackaged/main/default/objects/Engagements_Checklist__c/fields/Materials_Email_Sent__c.field-meta.xml
<CustomField>
    <fullName>Materials_Email_Sent__c</fullName>
    <description>Workbook, flipchart, homework, laptops, final exam, agenda, handouts?</description>
    <inlineHelpText>Workbook, flipchart, homework, laptops, final exam, agenda, handouts?</inlineHelpText>
    <label>Materials Email Sent</label>
    <type>Date</type>
</CustomField>