unpackaged/main/default/objects/Engagements_Checklist__c/fields/Materials_Shipped__c.field-meta.xml
<CustomField>
    <fullName>Materials_Shipped__c</fullName>
    <label>Materials Shipped</label>
    <type>Date</type>
</CustomField>