unpackaged/main/default/objects/Engagements_Checklist__c/fields/Meeting_CSI_Sent__c.field-meta.xml
<CustomField>
    <fullName>Meeting_CSI_Sent__c</fullName>
    <label>Meeting CSI Sent</label>
    <type>Date</type>
</CustomField>