unpackaged/main/default/objects/Engagements_Checklist__c/fields/Milestone_Meeting__c.field-meta.xml
<CustomField>
    <fullName>Milestone_Meeting__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Milestone Meeting</label>
    <type>Checkbox</type>
</CustomField>