unpackaged/main/default/objects/Engagements_Checklist__c/fields/NCM_Content__c.field-meta.xml
<CustomField>
    <fullName>NCM_Content__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>NCM Content</label>
    <referenceTo>NCM_Content__c</referenceTo>
    <relationshipLabel>Engagements Checklist</relationshipLabel>
    <relationshipName>Engagements_Checklist</relationshipName>
    <type>Lookup</type>
</CustomField>