unpackaged/main/default/objects/Engagements_Checklist__c/fields/NCM_Content_Version__c.field-meta.xml
<CustomField>
    <fullName>NCM_Content_Version__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>NCM Content Version</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>NCM Content Version is not valid for selected NCM Content</errorMessage>
        <filterItems>
            <field>NCM_Content_Version__c.NCM_Content__c</field>
            <operation>equals</operation>
            <valueField>$Source.NCM_Content__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>NCM_Content_Version__c</referenceTo>
    <relationshipLabel>Engagements Checklist</relationshipLabel>
    <relationshipName>Engagements_Checklist</relationshipName>
    <type>Lookup</type>
</CustomField>