unpackaged/main/default/objects/Engagements_Checklist__c/fields/NCM_Program__c.field-meta.xml
<CustomField>
    <fullName>NCM_Program__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>NCM Program</label>
    <referenceTo>OEM_Program__c</referenceTo>
    <relationshipLabel>Engagements Checklist</relationshipLabel>
    <relationshipName>Engagements_Checklist</relationshipName>
    <type>Lookup</type>
</CustomField>