unpackaged/main/default/objects/Engagements_Checklist__c/fields/No_Idea_Session__c.field-meta.xml
<CustomField>
    <fullName>No_Idea_Session__c</fullName>
    <defaultValue>false</defaultValue>
    <label>No Idea Session</label>
    <type>Checkbox</type>
</CustomField>