unpackaged/main/default/objects/Engagements_Checklist__c/fields/of_Best_Ideas_Submitted__c.field-meta.xml
<CustomField>
    <fullName>of_Best_Ideas_Submitted__c</fullName>
    <label># of Best Ideas Submitted</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>