unpackaged/main/default/objects/Engagements_Checklist__c/fields/One_Month_Check_Complete__c.field-meta.xml
<CustomField>
    <fullName>One_Month_Check_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Four Week Check- Complete</label>
    <type>Checkbox</type>
</CustomField>