unpackaged/main/default/objects/Engagements_Checklist__c/fields/One_Month_Check_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>One_Month_Check_Start_Date__c</fullName>
    <label>Four Week Check-  Start Date</label>
    <type>Date</type>
</CustomField>