unpackaged/main/default/objects/Engagements_Checklist__c/fields/Other_Notes__c.field-meta.xml
<CustomField>
    <fullName>Other_Notes__c</fullName>
    <label>Other Notes</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>