unpackaged/main/default/objects/Engagements_Checklist__c/fields/Printed_Product_Fees__c.field-meta.xml
<CustomField>
    <fullName>Printed_Product_Fees__c</fullName>
    <label>Printed Product Fees</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>