unpackaged/main/default/objects/Engagements_Checklist__c/fields/Program_Coordinator__c.field-meta.xml
<CustomField>
    <fullName>Program_Coordinator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Program Coordinator</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>You must enter a valid NCM Employee</errorMessage>
        <filterItems>
            <field>Contact.RecordType.Name</field>
            <operation>equals</operation>
            <value>NCM Associates</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Engagements Checklist (Program Coordinator)</relationshipLabel>
    <relationshipName>Engagements_Checklist1</relationshipName>
    <type>Lookup</type>
</CustomField>