unpackaged/main/default/objects/Engagements_Checklist__c/fields/Project_Manager__c.field-meta.xml
<CustomField>
    <fullName>Project_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Program Manager</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>You must choose a NCM Employee who is actively employed!</errorMessage>
        <filterItems>
            <field>Contact.RecordType.Name</field>
            <operation>equals</operation>
            <value>NCM Associates</value>
        </filterItems>
        <filterItems>
            <field>Contact.Employment_Status__c</field>
            <operation>equals</operation>
            <value>Employed</value>
        </filterItems>
        <infoMessage>You must choose a NCM Employee who is actively employed!</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Engagements Checklist</relationshipLabel>
    <relationshipName>Engagements_Checklist</relationshipName>
    <type>Lookup</type>
</CustomField>