unpackaged/main/default/objects/Engagements_Checklist__c/fields/Recipient_Name__c.field-meta.xml
<CustomField>
    <fullName>Recipient_Name__c</fullName>
    <label>Recipient Name</label>
    <type>TextArea</type>
</CustomField>