unpackaged/main/default/objects/Engagements_Checklist__c/fields/ROH_Rate__c.field-meta.xml
<CustomField>
    <fullName>ROH_Rate__c</fullName>
    <label>ROH Rate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>