unpackaged/main/default/objects/Engagements_Checklist__c/fields/Shipping_Method__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Method__c</fullName>
    <label>Shipping Method</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Shipping_Provider__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Next Day Air</fullName>
            </value>
            <value>
                <fullName>2nd Day Air</fullName>
            </value>
            <value>
                <fullName>3-Day Select</fullName>
            </value>
            <value>
                <fullName>Ground</fullName>
            </value>
            <value>
                <fullName>Priority Mail Express</fullName>
            </value>
            <value>
                <fullName>Priority Mail</fullName>
            </value>
            <value>
                <fullName>USPS Retail Ground</fullName>
            </value>
            <value>
                <fullName>Media Mail</fullName>
            </value>
            <value>
                <fullName>First-Class Mail</fullName>
            </value>
            <value>
                <fullName>First Overnight</fullName>
            </value>
            <value>
                <fullName>Priority Overnight</fullName>
            </value>
            <value>
                <fullName>Standard Overnight</fullName>
            </value>
            <value>
                <fullName>2 Day AM</fullName>
            </value>
            <value>
                <fullName>2 Day</fullName>
            </value>
            <value>
                <fullName>Urgent</fullName>
            </value>
            <value>
                <fullName>Regular</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>