unpackaged/main/default/objects/Engagements_Checklist__c/fields/Shipping_Provider__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Provider__c</fullName>
    <label>Shipping Provider</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>UPS</fullName>
            </value>
            <value>
                <fullName>USPS</fullName>
            </value>
            <value>
                <fullName>FedEx</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>