unpackaged/main/default/objects/Engagements_Checklist__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <label>State</label>
    <type>TextArea</type>
</CustomField>