unpackaged/main/default/objects/Engagements_Checklist__c/fields/Student_Count__c.field-meta.xml
<CustomField>
    <fullName>Student_Count__c</fullName>
    <label>Student Count</label>
    <type>TextArea</type>
</CustomField>