unpackaged/main/default/objects/Engagements_Checklist__c/fields/Tally_Amount_Confirmed__c.field-meta.xml
<CustomField>
    <fullName>Tally_Amount_Confirmed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tally Amount Confirmed</label>
    <type>Checkbox</type>
</CustomField>