unpackaged/main/default/objects/Engagements_Checklist__c/fields/Tasks_Created__c.field-meta.xml
<CustomField>
    <fullName>Tasks_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <description>used to prevent tasks from being created again during edits</description>
    <label>Tasks Created?</label>
    <type>Checkbox</type>
</CustomField>