unpackaged/main/default/objects/Engagements_Checklist__c/fields/Total_Room_Block_Nights__c.field-meta.xml
<CustomField>
    <fullName>Total_Room_Block_Nights__c</fullName>
    <label>Total Room Block Nights</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>