unpackaged/main/default/objects/Engagements_Checklist__c/fields/Travel_Notes__c.field-meta.xml
<CustomField>
    <fullName>Travel_Notes__c</fullName>
    <label>Travel Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>