unpackaged/main/default/objects/Engagements_Checklist__c/fields/X20_Group__c.field-meta.xml
<CustomField>
    <fullName>X20_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>20 Group</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>20 Group is no longer active.</errorMessage>
        <filterItems>
            <field>Twenty_Groups__c.Delete_Date__c</field>
            <operation>equals</operation>
            <value />
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Twenty_Groups__c</referenceTo>
    <relationshipLabel>Engagements Checklist</relationshipLabel>
    <relationshipName>Engagements_Checklist</relationshipName>
    <type>Lookup</type>
</CustomField>