unpackaged/main/default/objects/Engagements_Checklist__c/recordTypes/Checklist.recordType-meta.xml
<RecordType>
    <fullName>Checklist</fullName>
    <active>true</active>
    <description>Basic Checklist</description>
    <label>Checklist</label>
</RecordType>