unpackaged/main/default/objects/Engagements_Checklist__c/recordTypes/Professional_Services_Consulting.recordType-meta.xml
<RecordType>
    <fullName>Professional_Services_Consulting</fullName>
    <active>true</active>
    <description>Contains information, logic and tasks for NCMi consulting engagements</description>
    <label>Professional Services - Consulting</label>
</RecordType>