unpackaged/main/default/objects/Engagements_Checklist__c/recordTypes/Professional_Services_Training.recordType-meta.xml
<RecordType>
    <fullName>Professional_Services_Training</fullName>
    <active>true</active>
    <description>NCMi Professional Services - Training</description>
    <label>Professional Services - Training</label>
</RecordType>