unpackaged/main/default/objects/Engagements_Checklist__c/recordTypes/X20_Group_Meeting.recordType-meta.xml
<RecordType>
    <fullName>X20_Group_Meeting</fullName>
    <active>true</active>
    <description>Retail Solutions 20 Group Meeting</description>
    <label>20 Group Meeting</label>
</RecordType>