unpackaged/main/default/objects/Engagements_Checklist__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>EngagementsChecklistID_18__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Engagement_Start_Date__c</columns>
    <columns>Engagement_End_Date__c</columns>
    <columns>Project_Manager__c</columns>
    <columns>Program_Coordinator__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>