unpackaged/main/default/objects/Engagements_Checklist__c/listViews/Audi_Canada.listView-meta.xml
<ListView>
    <fullName>Audi_Canada</fullName>
    <columns>NAME</columns>
    <columns>Engagement_End_Date__c</columns>
    <columns>Engagement__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Other_Notes__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Account__c</field>
        <operation>contains</operation>
        <value>Audi Canada</value>
    </filters>
    <label>Audi Canada</label>
</ListView>