unpackaged/main/default/objects/Engagements_Checklist__c/listViews/NCM_Program_Engagement_Checklists.listView-meta.xml
<ListView>
    <fullName>NCM_Program_Engagement_Checklists</fullName>
    <columns>NAME</columns>
    <columns>Engagement__c</columns>
    <columns>NCM_Program__c</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <label>NCM Program Engagement Checklists</label>
</ListView>