unpackaged/main/default/objects/Engagements_Checklist__c/listViews/Search_by_Engagement.listView-meta.xml
<ListView>
    <fullName>Search_by_Engagement</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Engagement__c</field>
        <operation>contains</operation>
        <value>blah</value>
    </filters>
    <label>Search by Engagement</label>
</ListView>